wms-deploy/04-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: wms
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
