wms-deploy/09-httproute-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: wms
spec:
  parentRefs:
  - name: wms-gateway
    sectionName: https-frontend
  hostnames:
  - "app.datanetwork.online"
  rules:
  - forwardTo:
    - serviceName: frontend-svc
      port: 80
