wms-deploy/10-httproute-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: wms
spec:
  parentRefs:
  - name: wms-gateway
    sectionName: https-backend
  hostnames:
  - "api.datanetwork.online"
  rules:
  - forwardTo:
    - serviceName: backend-svc
      port: 5000
